# XVTools

./: .gitignore  LICENSE.txt  README.md  docker-shell.sh  dockerfile  job_infercnv.resolved.yml  job_infercnv.yml.tmpl  pyproject.toml  requirements.txt
R/src/: infercnv_helper.R
src/InfercnvAzureAPI/: _util.py  cli.py
src/xvtools/: cli.py
src/xvtools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/xvtools/commands/: download.py  submit_infercnv.py
src/xvtools/templates/: job_infercnv.yml.tmpl
